@@ -460,8 +460,8 @@ img {
     vertical-align:top;
     color:#ddd;
     color:#000;
-    margin:0 10px 0 0;
-    padding:2px 0 2px 0;
+    margin:0;
+    padding:2px 0 2px 10px;
 }
 
 /* 썸네일 */
@@ -508,6 +508,24 @@ img {
     white-space:normal;
 }
 
+#mw_basic .list_desc_info {
+    height:30px;
+}
+
+#mw_basic .list_desc_info span.item {
+    float:left;
+    line-height:20px;
+    margin-right:10px;
+}
+ 
+#mw_basic .list_desc_info span.mw_basic_list_name {
+}
+
+#mw_basic .list_desc_info span.item i {
+    line-height:10px;
+    padding-right:5px;
+}
+
 /* 글제목 */
 #mw_basic .mw_basic_list_subject {
     word-break:break-all;
@@ -526,6 +544,10 @@ img {
     padding-right:10px;
     max-width:0;
     text-overflow:ellipsis;
+}
+
+#mw_basic .mw_basic_list_subject.desc{
+    overflow:visible;
 }
 
 #mw_basic .mw_basic_list_subject i:first-child {
@@ -690,6 +712,7 @@ img {
     max-width:0;
     text-overflow:ellipsis;
     color:#000;
+    position:static;
 }
 
 /* 글쓴이 링크 */
@@ -2273,6 +2296,18 @@ i.fa-warning { color:#f36a2e; }
     word-break:break-all;
 }
 
+#mw_basic .mw_basic_list_gall {
+    float:left;
+}
+
+#mw_basic .list_gall_br {
+    clear:both;
+}
+
+#mw_basic .mobile_list_gall_br {
+    display:none;
+}
+
 @media screen and (max-width:500px) {
     #mw_basic { padding:5px; }
     .media-ip { display:none; }
@@ -2346,6 +2381,70 @@ i.fa-warning { color:#f36a2e; }
 
     #mw_basic #wr_content { 
         width:300px;
+    }
+
+    #mw_basic .mw_basic_list_gall {
+    }
+
+    #mw_basic .mw_basic_list_gall {
+        width:47% !important;
+        margin:0;
+    }
+
+    #mw_basic .mw_basic_list_gall .box {
+        width:90% !important;
+    }
+
+    #mw_basic .mw_basic_list_gall .gall_list {
+    }
+
+    #mw_basic .mw_basic_list_gall .gall_list td {
+        
+    }
+
+    #mw_basic .mw_basic_list_gall .gall_image {
+        position:relative;
+        width:130px;
+    }
+
+    #mw_basic .mw_basic_list_gall img.thumb {
+        width:100% !important;
+        height:auto !important;
+    }
+
+    #mw_basic .mw_basic_list_gall .gall_subject {
+        width:130px !important;
+        margin:0 auto 0 auto;
+        text-overflow: ellipsis;
+        white-space:nowrap;
+    }
+    #mw_basic .mw_basic_list_gall .gall_subject div {
+
+    }
+    #mw_basic .mobile_list_gall_br {
+        clear:both;
+        line-height:0;
+        font-size:0;
+        height:0;
+        display:block;
+    }
+
+    #mw_basic .list_gall_br {
+        display:none;
+    }
+
+    #mw_basic .mw_basic_list_thumb, 
+    #mw_basic .list_thumb_img {
+        width:90% !important;
+        height:90% !important;
+    }
+
+    #mw_basic .thumb_td {
+        width:100px !important;
+        margin-left:10px;
+    }
+    #mw_basic .list_desc_info {
+        display:block;
     }
 }
 
